--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -11,7 +11,7 @@
     <title></title>
 
     <script src="https://www.wikitude.com/libs/architect.js"></script>
-    <script type="text/javascript" src="../ade.js"></script>
+    <script type="text/javascript" src="ade.js"></script>
 
     <link rel="stylesheet" href="css/default.css">
 
