--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -40,15 +40,17 @@
                 <input id="tracking-start-stop-button" type="image" src="assets/buttons/start.png" onclick="World.changeTrackerState()"/>
                 
                 <div id="tracking-controls-container-lower-spacing"></div>
-                
-                <input id="tracking-model-button-0" class="tracking-model-button-inactive" type="image" />
-                <input id="tracking-model-button-1" class="tracking-model-button-inactive" type="image" />
-                <input id="tracking-model-button-2" class="tracking-model-button-inactive" type="image" />
-                <input id="tracking-model-button-3" class="tracking-model-button-inactive" type="image" />
-                <input id="tracking-model-button-4" class="tracking-model-button-inactive" type="image" />
+
+                <div id="inputs"></div>
                 <!--
-                <input id="test" class="tracking-model-button-inactive" type="image" />
-                -->
+                                <input id="tracking-model-button-0" data-id="0" class="tracking-model-button-inactive" type="image" />
+                                <input id="tracking-model-button-1" data-id="1" class="tracking-model-button-inactive" type="image" />
+                                <input id="tracking-model-button-2" data-id="2" class="tracking-model-button-inactive" type="image" />
+                                <input id="tracking-model-button-3" data-id="3" class="tracking-model-button-inactive" type="image" />
+                                <input id="tracking-model-button-4" data-id="4" class="tracking-model-button-inactive" type="image" />
+                                <!--
+                                <input id="test" class="tracking-model-button-inactive" type="image" />
+                                -->
 
             </div>
         </div>
