Fixed Some Bugs

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -58,7 +58,8 @@
     $(document).ready(function () {
         $('#sidebar').BootSideMenu({
             pushBody: false,
-            closeOnClick:true
+            closeOnClick:true,
+            width: "1%"
         }).hide();
     });
 
