delete specific object by dropping it into trash

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -34,7 +34,7 @@
         <div id="inputs"></div>
     </div>
 </div>
-<div class="container">
+<div class="container" id="ContDiv">
     <div class="row">
         <div id="tracking-height-slider-container" class="col-md-4 col-md-offset-4">
             <div id="tracking-height-slider-container-inner">
@@ -47,6 +47,7 @@
     <input id="tracking-start-stop-button" class="col-md-4 col-md-offset-4" type="image"
            src="assets/buttons/start.png"
            onclick="World.changeTrackerState()"/>
+
 </div>
 <!-- jquery JS files -->
 <script type="text/javascript" src="jquery/jquery-1.9.1.min.js"></script>
