--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+<span id="textt">x</span>
 <div id="sidebar">
     <div class="list-group">
         <div id="inputs"></div>
@@ -37,6 +38,7 @@
 <div class="container" id="ContDiv">
     <div class="row">
         <div id="tracking-height-slider-container" class="col-md-4 col-md-offset-4">
+
             <div id="tracking-height-slider-container-inner">
                 <input id="tracking-height-slider" type="range" min="0.1" value="1.0" max="2.0"
                        step="0.1"
