--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -17,19 +17,14 @@
     <link rel="stylesheet" href="css/default.css">
 
     <!-- jquery mobile CSS -->
-    <link rel="stylesheet" href="jquery/jquery.mobile-1.3.2.min.css"/>
+    <link rel="stylesheet" href="jquery/jquery.mobile-1.4.5.min.css"/>
     <!-- required to set background transparent & enable "click through" -->
-    <link rel="stylesheet" href="jquery/jquery-mobile-transparent-ui-overlay.css"/>
-
     <!--bootstrap css-->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
-
 
 </head>
 
-<body>
-<span id="textt">x</span>
+<body style="">
 <div id="sidebar">
     <div class="list-group">
         <div id="inputs"></div>
@@ -45,6 +40,10 @@
                        onchange="World.changeTrackingHeight(value)">
             </div>
         </div>
+        <input id="tracking-screenshot-button" class="col-md-1 col-md-offset-3" type="image" hidden
+               src="assets/buttons/camera.png"
+               onclick="World.captureScreen()"/>
+
     </div>
     <input id="tracking-start-stop-button" class="col-md-4 col-md-offset-4" type="image"
            src="assets/buttons/start.png"
@@ -52,16 +51,17 @@
 
 </div>
 <!-- jquery JS files -->
-<script type="text/javascript" src="jquery/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="jquery/jquery.mobile-1.3.2.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="js/BootSideMenu.js"></script>
-<script src="js/3dmodelsandgesturesinstanttracking.js"></script>
+<script type="text/javascript" src="jquery/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="jquery/jquery-migrate-3.0.0.min.js"></script>
+<script type="text/javascript" src="jquery/jquery.mobile-1.4.5.min.js"></script>
+<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/BootSideMenu.js"></script>
+<script type="text/javascript" src="js/Tracking.js"></script>
 <script>
     $(document).ready(function () {
         $('#sidebar').BootSideMenu({
             pushBody: false,
-            closeOnClick:true,
+            closeOnClick: true,
             width: "1%"
         }).hide();
     });
