--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -17,10 +17,14 @@
     <link rel="stylesheet" href="css/default.css">
 
     <!-- jquery mobile CSS -->
-    <link rel="stylesheet" href="jquery/jquery.mobile-1.4.5.min.css"/>
+    <link rel="stylesheet" href="jquery/jquery.mobile-1.3.2.min.css"/>
     <!-- required to set background transparent & enable "click through" -->
+    <link rel="stylesheet" href="jquery/jquery-mobile-transparent-ui-overlay.css"/>
+
     <!--bootstrap css-->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
+
 
 </head>
 
@@ -51,9 +55,8 @@
 
 </div>
 <!-- jquery JS files -->
-<script type="text/javascript" src="jquery/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="jquery/jquery-migrate-3.0.0.min.js"></script>
-<script type="text/javascript" src="jquery/jquery.mobile-1.4.5.min.js"></script>
+<script type="text/javascript" src="jquery/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="jquery/jquery.mobile-1.3.2.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/BootSideMenu.js"></script>
 <script type="text/javascript" src="js/Tracking.js"></script>
